# testaustime-backend

./: Cargo.toml  settings.toml.example
migrations/2025-02-28-071855_add_email/: down.sql  up.sql
src/: error.rs  main.rs  models.rs  ratelimiter.rs  schema.rs  state.rs  utils.rs
src/api/: account.rs  activity.rs  auth.rs  friends.rs  leaderboards.rs  mod.rs  oauth.rs  search.rs  stats.rs  users.rs
src/auth/: mod.rs  secured_access.rs
src/database/: activity.rs  auth.rs  leaderboards.rs  mod.rs
src/tests/: account.rs  activity.rs  auth.rs  friends.rs  leaderboards.rs  macros.rs  mod.rs
