[package]
name = "testaustime-rs"
version = "0.3.1"
edition = "2021"
authors = ["Ville Järvinen <jarvinenville606@gmail.com>", "Luukas Pörtfors <lajp@iki.fi>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["testausid"]
testausid = ["dep:reqwest"]

[profile.release]
lto = true

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio"] }
axum-extra = { version = "0.9", features = ["cookie", "cookie-private"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"]}
reqwest = { version = "0.11", optional = true, features = ["json"] }
http = "1.0"
regex = "1.5"

tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
tracing-futures = "0.2"

thiserror = "1.0"

serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

toml = "0.8"
futures = "0.3"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.2"
argon2 = "0.4"
rand = "0.8"
dotenv = "0.15"
url = "2.2"

itertools = "0.12"
governor = "0.6.0"
diesel = { version = "2.1.0", features = ["chrono", "serde_json"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
