[package]
name = "testaustime"
version = "0.3.1"
edition = "2021"
authors = ["Ville Järvinen <jarvinenville606@gmail.com>", "Luukas Pörtfors <lajp@iki.fi>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["testausid"]
testausid = ["dep:reqwest"]

[profile.release]
lto = true

[dependencies]
axum = { version = "0.8", features = ["macros", "tokio"] }
axum-extra = { version = "0.10", features = ["cookie", "cookie-private"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"]}
reqwest = { version = "0.12", optional = true, features = ["json"] }
http = "1.0"
http-body-util = "0.1"
regex = "1.5"

tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
tracing-futures = "0.2"

thiserror = "2.0"

serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

toml = "0.8"
futures = "0.3"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
argon2 = "0.4"
rand = "0.9"
dotenv = "0.15"
url = "2.2"

itertools = "0.14"
governor = "0.10.0"
diesel = { version = "2.1.0", features = ["chrono", "serde_json"] }
diesel-async = { version = "0.5.1", features = ["postgres", "deadpool"] }
lettre = { version = "0.11.14", features = ["tokio1-native-tls", "tracing", "pool"]}
mime = "0.3.17"
